fix spacing (#11)
* fix spacing

* tag and export

--- a/src/marketing/enterprise-logos/enterprise-logos.module.scss
+++ b/src/marketing/enterprise-logos/enterprise-logos.module.scss
@@ -1,24 +1,29 @@
 .holder {
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(266px, 1fr));
   grid-gap: 70px 0;
   display: grid;
   align-items: center;
-  max-width: 1000px;
-  margin: auto;
+  max-width: 1330px;
+  margin-left: auto;
+  margin-right: auto;
+
+  .icon {
+    margin: auto;
+  }
+
+  @media (max-width: 1440px) {
+    grid-template-columns: repeat(auto-fill, minmax(216px, 1fr));
+    max-width: 1080px;
+	}
 
   @media (max-width: 1080px) {
-    max-width: 600px;
-
-    .icon {
-      margin: auto;
-
-      &:nth-child(n+10) {
-        display: none;
-      }
+    max-width: 648px;
+    .icon:nth-child(n+10) {
+      display: none;
     }
 	}
   @media (max-width: 768px) {
-    max-width: 400px;
+    max-width: 432px;
     .icon:nth-child(n+7) {
       display: none;
     }
