--- a/src/pages/hybrid-homepage/hybrid-homepage.module.scss
+++ b/src/pages/hybrid-homepage/hybrid-homepage.module.scss
@@ -91,6 +91,14 @@
 	margin-bottom: 30px;
 }
 
+.margin100 {
+	margin-bottom: 100px;
+}
+
+.margin130 {
+	margin-bottom: 130px;
+}
+
 .margin180 {
 	margin-bottom: 180px;
 }
